[gd_scene load_steps=5 format=3 uid="uid://bowcd6my4mta2"]

[ext_resource type="Script" uid="uid://dufo6sah0lbc6" path="res://Scripts/world_map.gd" id="1_whvw3"]
[ext_resource type="Script" uid="uid://ifw7ak0slyjc" path="res://Scripts/map_generator.gd" id="2_e2gad"]
[ext_resource type="Texture2D" uid="uid://cu5fj3jhu1dqf" path="res://Assets/Characters/character_30_frame32x32.png" id="3_e2gad"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uwqkr"]
atlas = ExtResource("3_e2gad")
region = Rect2(38.1528, 0, 19.4865, 23.1454)

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_whvw3")

[node name="MapGenerator" type="Node" parent="."]
script = ExtResource("2_e2gad")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 608)

[node name="MapTextures" type="Node2D" parent="."]
scale = Vector2(3, 3)

[node name="Lines" type="Node2D" parent="MapTextures"]
unique_name_in_owner = true

[node name="Camps" type="Node2D" parent="MapTextures"]
unique_name_in_owner = true

[node name="PlayerSprite" type="Sprite2D" parent="MapTextures"]
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_uwqkr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NewMapButton" type="Button" parent="CanvasLayer"]
visible = false
offset_right = 81.0
offset_bottom = 31.0
text = "New Map"

[node name="ChooseButton" type="Button" parent="CanvasLayer"]
offset_top = 38.0
offset_right = 65.0
offset_bottom = 69.0
text = "Choose"

[node name="SetupCampButton" type="Button" parent="CanvasLayer"]
offset_top = 75.0
offset_right = 65.0
offset_bottom = 106.0
text = "Setup Camp"

[connection signal="pressed" from="CanvasLayer/NewMapButton" to="." method="_on_new_map_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ChooseButton" to="." method="_on_choose_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SetupCampButton" to="." method="_on_setup_camp_button_pressed"]
